<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackground">

    <LinearLayout
        android:orientation="vertical"
        android:padding="16dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/tvEmail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="user@example.com"
            android:textColor="@color/colorOnBackground"
            android:textStyle="bold"
            android:textSize="18sp"
            android:layout_marginBottom="12dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/choose_theme"
            android:textColor="@color/colorOnBackground"
            android:textStyle="bold" />

        <RadioGroup
            android:id="@+id/rgTheme"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="8dp">

            <RadioButton
                android:id="@+id/rbLight"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/light_theme"
                android:checked="true"/>

            <RadioButton
                android:id="@+id/rbDark"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/dark_theme"
                android:layout_marginStart="24dp"/>
        </RadioGroup>

        <Button
            android:id="@+id/btnLogout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/logout"
            android:textAllCaps="false"
            android:layout_marginTop="24dp"
            android:backgroundTint="@color/colorAccent"
            android:textColor="@color/colorOnPrimary"/>
    </LinearLayout>
</ScrollView>
