<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:padding="24dp"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackground">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Harmony Player"
        android:textStyle="bold"
        android:textSize="24sp"
        android:textColor="@color/colorPrimary"
        android:layout_marginBottom="24dp"/>

    <EditText
        android:id="@+id/etEmail"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:hint="@string/username"
        android:inputType="textEmailAddress"
        android:background="@drawable/search_bg"
        android:paddingStart="16dp"
        android:paddingEnd="16dp"/>

    <EditText
        android:id="@+id/etPassword"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginTop="12dp"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:background="@drawable/search_bg"
        android:paddingStart="16dp"
        android:paddingEnd="16dp"/>

    <Button
        android:id="@+id/btnSignIn"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginTop="16dp"
        android:text="@string/sign_in"
        android:textAllCaps="false"
        android:backgroundTint="@color/colorPrimary"
        android:textColor="@color/colorOnPrimary"/>
</LinearLayout>
